syntax = "proto3";

message Message {
  oneof type {
    Content content = 1;

    // Server response to the peer wanted to join a peer to peer network.
    // True if the first peer in the network.
    bool isFirst = 2; // Only outcoming message

    // Peer response to the server when he joined the peer to peer network
    // successfully and is ready to help other peers to join this network.
    bool joined = 3; // Only incoming

    // Server send `pong` if reseives a `ping`. In addition the server
    // sends `ping` periodically and expects to get `pong` response, otherwise
    // closes the socket with this peer.
    bool ping = 4;
    bool pong = 5;
  }
}

message Content {
  uint32 id = 1; // Peer id to route data.

  // Data to be transmitted to the sibling peer
  oneof type {
    bytes data = 2; // WebRTC data (in fact could be any array of bytes)
    bool isError = 3; // Indicating that error occured and thus signaling unsubscribes from the problematic peer
    bool isEnd = 4; // Indicating that the peer finished to send all data to another peer
  }
}
